--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </style>
 </head>
 <body>
-<a href='/tez/SelectOperator.html'>recharge</a>
+<a href='tez/SelectOperator.html'>recharge</a>
 </body>
 </html>
