input type changed to number for mobile keyboard

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -37,14 +37,14 @@
                   <label class="control-label" for="mobile_number">Enter mobile number</label>
                   <div class="input-group">
                       <span class="input-group-addon">+91</span>
-                      <input type="text" class="form-control" id="mobile_number" autofocus="autofocus">
+                      <input type="number" class="form-control" id="mobile_number" autofocus="autofocus">
                   </div>
               </div>
               <div class="form-group">
                   <label class="control-label" for="recharge_amount">Enter recharge amount</label>
                   <div class="input-group">
                       <span class="input-group-addon"><img src='images/rupee-img.png' style="height:17px;"></span>
-                      <input type="text" class="form-control" id="recharge_amount">
+                      <input type="number" class="form-control" id="recharge_amount">
                   </div>
                   <span class="btn-right">
                       <a href='ViewPlans.html'>view plans</a>
