updated names of tez and upi payment files

--- a/SelectPaymentMethod.html
+++ b/SelectPaymentMethod.html
@@ -41,10 +41,10 @@
             <span class="field_label">Select payment method</span>
             <ul class="payment_gatemways">
                 <li>
-                    <a href='TEZpayment.html'><img id="tez" src="images/paymentsmethods/tez.png" /></a>
+                    <a href='TEZPayment.html'><img id="tez" src="images/paymentsmethods/tez.png" /></a>
                 </li>
                 <li>
-                    <a href='UPIpayment.html'><img id="upi" src="images/paymentsmethods/upi.png" /></a>
+                    <a href='UPIPayment.html'><img id="upi" src="images/paymentsmethods/upi.png" /></a>
                 </li>
             </ul>
           </div>
