homogenized styles further

--- a/SelectPaymentMethod.html
+++ b/SelectPaymentMethod.html
@@ -36,19 +36,20 @@
                 <span class="amount">₹799</span>
             </span>
         </div>
-        <div class="content">
-          <div class="payment-methods-list">
-            <span class="field_label">Select payment method</span>
-            <ul class="payment_gatemways">
-                <li>
-                    <a href='TEZPayment.html'><img id="tez" src="images/paymentsmethods/tez.png" /></a>
-                </li>
-                <li>
-                    <a href='UPIPayment.html'><img id="upi" src="images/paymentsmethods/upi.png" /></a>
-                </li>
-            </ul>
-          </div>
+
+        <div class="payment-methods-list content-list">
+          <span class="field_label padding-top-25">Select payment method</span>
+          <ul class="payment_gatemways">
+              <li>
+                  <a href='TEZPayment.html'><img id="tez" src="images/paymentsmethods/tez.png" /></a>
+              </li>
+              <li>
+                  <a href='UPIPayment.html'><img id="upi" src="images/paymentsmethods/upi.png" /></a>
+              </li>
+          </ul>
+          <h5 class='disclaimer'>This is placeholder text for any information that could potentially be useful for the user at this point.</h5>
         </div>
+
     </div>
     <img src="images/powered-by-billdesk.png" class="powered-by" />
     <img src="images/city-mobile.png" class="billdesk-city">
