--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -54,7 +54,7 @@
                   </div>
                   <div class="bank-selection">
                     <label class="control-label" for="upi_id" style='padding-left: 60px;'>Select Bank</label>
-                    <select class="form-control" placeholder="select bank">
+                    <select class="form-control">
                         <option>Select bank</option>
                         <option>2</option>
                         <option>3</option>
