--- a/ViewPlans.html
+++ b/ViewPlans.html
@@ -17,7 +17,7 @@
         <div class="selected_operator">
             <img src="images/Operators/vodafone-color.png"/>
             <div class="plans-operator-name">Vodafone</div>
-            <span id="nav_prev">&#10005;</span>
+            <span id="nav_close">&#10005;</span>
         </div>
       </div>
       <ul class="horizontal_tabs">
