Added few changes.

--- a/ViewPlans.html
+++ b/ViewPlans.html
@@ -28,18 +28,18 @@
           <li>Roaming</li>
       </ul>
         <div class="recharge_plans content-list">
-            <div class="plan">
+            <a class="plan" href="/">
                 <h3>₹25</h3>
                 <span>Rs. 25 Talktime and 2 Local On-Net SMS free</span>
-            </div>
-            <div class="plan">
+            </a>
+            <a class="plan" href="/">
                 <h3>₹35</h3>
                 <span>Rs. 35 Talktime</span>
-            </div>
-            <div class="plan">
+            </a>
+            <a class="plan" href="/">
                 <h3>₹109</h3>
                 <span>Talktime Rs.115 (< 90 days customers), Talktime 91.78 (for > 90 days Customers), Validity 0 days.</span>
-            </div>
+            </a>
             <h5 class='disclaimer'>Please verify recharge amount and benefit with your operator before proceeding. Plans have been shown on the basis of latest available information about them and might not be accurate. You may choose to recharge with any amount but the benefit will be decided by your service provider.</h5>
         </div>
       </div>
