--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -1,76 +1,185 @@
+
 <!DOCTYPE html>
+
+
 <html>
+
+
 <head>
-    <title>Recharge Form</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/rechargeinput.css">
+  <title>Recharge Form</title>
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
+    rel="stylesheet">
+
+  <link rel="stylesheet"
+    type="text/css"
+    href="css/rechargeinput.css">
+
 </head>
+
 <body>
-    <div class="container">
-         <div class="nav_bar"> <!-- Navigation Bar -->
-            <a href="/">
-                <img src="images/recharge-logo.png" />
-            </a>
-            <span id="nav_prev">
-                <svg width="18px" height="18px" viewBox="0 0 14 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="Selecting-Network-Operator-Copy-2" transform="translate(-1061.000000, -207.000000)" fill-rule="nonzero" fill="#979797">
-                            <path d="M1063.52266,213.640675 L1074.63269,213.640675 L1074.63269,214.640675 L1063.45232,214.640675 L1069.30491,219.97559 L1068.63125,220.714626 L1061.51829,214.230835 L1068.61453,207.134598 L1069.32164,207.841705 L1063.52266,213.640675 Z" id="Combined-Shape"></path>
-                        </g>
-                    </g>
-                </svg>
-            </span>
-        </div>
-        <div class='content'>
-          <div class="selected_operator"> <!-- Information Mast -->
-              <img src="images/Operators/vodafone-color.png" />
-              <span >Vodafone</span>
+
+  <div class="container">
+
+    <div class="nav_bar">
+      <!-- Navigation Bar -->
+
+      <a href="/">
+        <img src="images/recharge-logo.png">
+
+      </a>
+
+      <span id="nav_prev">
+
+        <svg width="18px"
+          height="18px"
+          viewBox="0 0 14 14"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xlink="http://www.w3.org/1999/xlink">
+
+          <g stroke="none"
+            stroke-width="1"
+            fill="none"
+            fill-rule="evenodd">
+
+            <g id="Selecting-Network-Operator-Copy-2"
+              transform="translate(-1061.000000, -207.000000)"
+              fill-rule="nonzero"
+              fill="#979797">
+              <path d="M1063.52266,213.640675 L1074.63269,213.640675 L1074.63269,214.640675 L1063.45232,214.640675 L1069.30491,219.97559 L1068.63125,220.714626 L1061.51829,214.230835 L1068.61453,207.134598 L1069.32164,207.841705 L1063.52266,213.640675 Z"
+                id="Combined-Shape" />
+
+            </g>
+          </g>
+        </svg>
+      </span>
+    </div>
+
+    <div class="content">
+      <div class="selected_operator">
+        <!-- Information Mast -->
+        <img src="images/Operators/vodafone-color.png">
+
+        <span>Vodafone</span>
+      </div>
+
+      <form class="recharge_form"
+        action="SelectPaymentMethod.html">
+
+        <div class="form-group">
+          <label class="control-label"
+            for="mobile_number">Enter mobile number
+          </label>
+
+          <div class="input-group">
+            <span class="input-group-addon">+91</span>
+            <input type="number"
+              maxlength="10"
+              pattern="[0-9]*"
+              inputmode="numeric"
+              class="form-control"
+              id="mobile_number"
+              autofocus="autofocus">
+
           </div>
-          <form class="recharge_form" action='SelectPaymentMethod.html'>
-              <div class="form-group">
-                  <label class="control-label" for="mobile_number">Enter mobile number</label>
-                  <div class="input-group">
-                      <span class="input-group-addon">+91</span>
-                      <input type="number" pattern="[0-9]*" inputmode="numeric" class="form-control" id="mobile_number" autofocus="autofocus">
-                  </div>
-              </div>
-              <div class="form-group">
-                  <label class="control-label" for="recharge_amount">Enter recharge amount</label>
-                  <div class="input-group">
-                      <span class="input-group-addon"><img src='images/rupee-img.png' style="height:17px;"></span>
-                      <input type="number" pattern="[0-9]*" inputmode="numeric" class="form-control" id="recharge_amount">
-                  </div>
-                  <span class="btn-right">
-                      <a href='ViewPlans.html'>view plans</a>
-                  </span>
-              </div>
-              <button class="button primary fullwidth">Pay</button>
-          </form>
         </div>
+
+        <div class="form-group">
+          <label class="control-label"
+            for="recharge_amount">Enter recharge amount
+          </label>
+
+          <div class="input-group">
+            <span class="input-group-addon">
+              <img src="images/rupee-img.png"
+                style="height:17px;">
+            </span>
+            <input type="number"
+              pattern="[0-9]*"
+              inputmode="numeric"
+              class="form-control"
+              id="recharge_amount">
+          </div>
+          <span class="btn-right">
+            <a href="ViewPlans.html">view plans</a>
+          </span>
+        </div>
+        <p class="form_message">Unlimited talktime. 84 GB data (3GB/day).</p>
+        <button id="pay_button" class="button fullwidth">Pay</button>
+      </form>
     </div>
-    <div class="billdesk-about">
-      <img src="images/powered-by-billdesk.png" class="powered-by" />
-      <img src="images/city-mobile.png" class="billdesk-city">
+    <div class="view_plans">
+      <h3>Past Recharges</h3>
+      <ul>
+        <li>
+          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div>
+            <span class="past_number">9108292413</span>
+            <span class="past_area">Vodafone Karnataka</span>
+          </div>
+          <span>₹31</span>
+        </li>
+        <li>
+          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div>
+            <span class="past_number">9108292413</span>
+            <span class="past_area">Vodafone Karnataka</span>
+          </div>
+          <span>₹31</span>
+        </li>
+      </ul>
     </div>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script
-        src="http://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    <script type="text/javascript">
-        $(function(){
-            $("#nav_prev").on('click', function(e) {
-                window.history.back();
-            })
-        })
-    </script>
+  </div>
+
+  <div class="billdesk-about">
+    <img src="images/powered-by-billdesk.png"
+      class="powered-by">
+
+    <img src="images/city-mobile.png"
+      class="billdesk-city">
+
+  </div>
+
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+
+
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous" ></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" ></script>
+  <script type="text/javascript">
+    $(function() {
+      $("#nav_prev").on("click", function(e) {
+        window.history.back();
+      });
+      $("#mobile_number").on('input', function() {
+        var length = $(this).val().length;
+        if (length > 10) {
+          $("#pay_button").addClass('primary');
+        } else {
+          $("#pay_button").removeClass('primary');
+        }
+      })
+    });
+
+  </script>
 </body>
 </html>
