--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -53,9 +53,9 @@
                     <img src='images/at.png' class='the-at'/>
                   </div>
                   <div class="bank-selection">
-                    <label class="control-label" for="upi_id" style='padding-left: 60px;'>Select Bank</label>
-                    <select class="form-control" placeholder="select bank">
-                        <option>Select bank</option>
+                    <label class="control-label" for="upi_bank" style="padding-left: 60px;"">Select Bank</label>
+                    <select class="form-control" placeholder="select bank" id="upi_bank">
+                        <option value="">Select bank</option>
                         <option>2</option>
                         <option>3</option>
                         <option>4</option>
@@ -64,7 +64,7 @@
                   </div>
               </div>
           </div>
-        <button class="button primary fullwidth">Pay</button>
+        <button class="button fullwidth" id="pay_button">Pay</button>
         <div class="cancel_transactions">
             <svg width="15px" height="15px" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -92,6 +92,13 @@
         $(function(){
             $("#nav_prev").on('click', function(e) {
                 window.history.back();
+            });
+            $("#upi_id, #upi_bank").on("input", function() {
+                if ($(this).val() && $("#upi_bank").val()) {
+                    $("#pay_button").addClass("primary");
+                } else {
+                    $("#pay_button").removeClass("primary");
+                }
             })
         })
     </script>
