Some improvements to the home page

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -111,12 +111,13 @@
         </div>
         <p class="form_message">Unlimited talktime. 84 GB data (3GB/day).</p>
         <div class="operator_and_plans">
-          <div class="selected_operator"> <!--Selected Operator shows here + option to view plans -->
+          <div class="selected_operator" href="ViewPlans.html"> <!--Selected Operator shows here + option to view plans -->
              <img src="images/Operators/vodafone-color.png">
              <div class="selected_circle_info">
                <span>Vodafone</span>
                <span class="selected_operator_circle">Karnataka</span>
              </div>
+             <img class='select_different_operator' src="images/combo.png"/>
              <span class="btn-right">
                <a href="ViewPlans.html">view plans</a>
              </span>
@@ -127,8 +128,8 @@
 
     </div>
 
-    <div class="view_plans">
-      <h3>Past Recharges</h3>
+    <div class="view_plans content-list">
+      <h3 class='section-title'>Past Recharges</h3>
       <ul>
         <li>
           <img class="operator_logo" src="images/Operators/vodafone-color.png" />
@@ -147,6 +148,7 @@
           <span>₹31</span>
         </li>
       </ul>
+      <h5 class='disclaimer'>The benefit attached to the same amount is subject to change, based on the operator's decision. Please verify recharge amount and benefit with your operator before proceeding.</h5>
     </div>
   </div>
 
