--- a/ViewPlans.html
+++ b/ViewPlans.html
@@ -55,7 +55,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script type="text/javascript">
         $(function(){
-            $("#nav_prev").on('click', function(e) {
+            $("#nav_close").on('click', function(e) {
                 window.history.back();
             })
         })
