Some more improvements

--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -55,7 +55,7 @@
                   <div class="bank-selection">
                     <label class="control-label" for="upi_bank" style='padding-left: 60px;'>Select Bank</label>
                     <select class="form-control" id="upi_bank">
-                        <option value="">Select bank</option>
+                        <option value="">...</option>
                         <option>2</option>
                         <option>3</option>
                         <option>4</option>
