Somre more CSS changes

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -71,9 +71,7 @@
     </div>
 
     <div class="content">
-      <form class="recharge_form"
-        action="SelectPaymentMethod.html">
-
+      <form class="recharge_form" action="SelectPaymentMethod.html">
         <div class="form-group">
           <label class="control-label"
             for="mobile_number">Enter mobile number
@@ -111,7 +109,7 @@
         </div>
         <p class="form_message">Unlimited talktime. 84 GB data (3GB/day).</p>
         <div class="operator_and_plans">
-          <div class="selected_operator" href="ViewPlans.html"> <!--Selected Operator shows here + option to view plans -->
+          <div class="selected_operator"> <!--Selected Operator shows here + option to view plans -->
              <img src="images/Operators/vodafone-color.png">
              <div class="selected_circle_info">
                <span>Vodafone</span>
