--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class='content'>
-          <div class="payment_details">
+          <form class="payment_details" action="PaymentSuccess.html">
               <div class="form-group">
                   <label class="control-label" for="upi_id">Enter Tez UPI ID</label>
                   <div class="input-group">
@@ -63,7 +63,7 @@
                     </select>
                   </div>
               </div>
-          </div>
+          </form>
         <button id="pay_button" class="button fullwidth">Pay</button>
         <div class="cancel_transactions">
             <svg width="15px" height="15px" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
