--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -40,22 +40,20 @@
         </div>
 
         <div class='content'>
-          <div class="payment_details">
+          <form class="payment_details" action="PaymentFailure.html">
               <div class="form-group">
                   <label class="control-label" for="upi_id">Enter Tez UPI ID</label>
                   <div class="input-group">
                       <input type="text" class="form-control" id="upi_id" autofocus="autofocus" style="border-radius:4px;">
                   </div>
-                  <img class="input-logo" id="upi" src="images/paymentsmethods/upi.png" />
+                  <img class="input-logo" id="upi" src="images/paymentsmethods/upi.png"/>
               </div>
               <div class="select_bank">
-                  <div class='at-the-rate'>
-                    <img src='images/at.png' class='the-at'/>
-                  </div>
+                  <div class='at-the-rate'><img src='images/at.png' class='the-at'/></div>
                   <div class="bank-selection">
-                    <label class="control-label" for="upi_bank" style="padding-left: 60px;"">Select Bank</label>
-                    <select class="form-control" placeholder="select bank" id="upi_bank">
-                        <option value="">Select bank</option>
+                    <label class="control-label" for="upi_bank" style="padding-left: 60px;">Select Bank</label>
+                    <select class="form-control" id="upi_bank">
+                        <option value="">...</option>
                         <option>2</option>
                         <option>3</option>
                         <option>4</option>
@@ -63,7 +61,7 @@
                     </select>
                   </div>
               </div>
-          </div>
+            </form>
         <button class="button fullwidth" id="pay_button">Pay</button>
         <div class="cancel_transactions">
             <svg width="15px" height="15px" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
