Done with minor touch-ups

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -135,7 +135,7 @@
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
           </div>
-          <span>₹31</span>
+          <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
           <img class="operator_logo" src="images/Operators/vodafone-color.png" />
@@ -143,7 +143,7 @@
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
           </div>
-          <span>₹31</span>
+          <span>&#x20b9;&nbsp;31</span>
         </li>
       </ul>
       <h5 class='disclaimer'>The benefit attached to the same amount is subject to change, based on the operator's decision. Please verify recharge amount and benefit with your operator before proceeding.</h5>
