--- a/SelectPaymentMethod.html
+++ b/SelectPaymentMethod.html
@@ -33,7 +33,7 @@
             </span>
             <span class="cost">
                 <span class="control-label">Amount</span>
-                <span class="amount">₹799</span>
+                <span class="amount">&#x20b9;&nbsp;799</span>
             </span>
         </div>
 
