--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -35,7 +35,7 @@
             </span>
             <span class="cost">
                 <span class="control-label">Amount</span>
-                <span class="amount">₹799</span>
+                <span class="amount">&#x20b9;&nbsp;799</span>
             </span>
         </div>
 
@@ -65,15 +65,8 @@
               </div>
           </form>
         <button id="pay_button" class="button fullwidth">Pay</button>
-        <div class="cancel_transactions">
-            <svg width="15px" height="15px" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <path d="M6.5,6.07089821 L1.0265662,0.597464419 L0.319459424,1.3045712 L5.79289322,6.778005 L0.319459424,12.2514388 L1.0265662,12.9585456 L6.5,7.48511178 L11.9734338,12.9585456 L12.6805406,12.2514388 L7.20710678,6.778005 L12.6805406,1.3045712 L11.9734338,0.597464419 L6.5,6.07089821 Z" id="Combined-Shape" fill="#F07322" fill-rule="nonzero"></path>
-                </g>
-            </svg>
-            <span>
-                Cancel this transaction
-            </span>
+        <div class="secondary_button">
+            <img src='images/close.png'><span>Cancel this transaction</span>
         </div>
         <div class="payment_desc">
             Tez is a new Payment app By Google. <br/>To download Tez,&nbsp;<a href="#">click here</a>
