--- a/PaymentFailure.html
+++ b/PaymentFailure.html
@@ -27,15 +27,11 @@
         </div>
         <div class="content-list">
           <div class="payment_status">
-              <span class="status_symbol_failure">
-                  !
+              <span class="status_symbol">
+                  <img src='images/failure.png'/>
               </span>
-              <span class="status_message">
-                  Recharge Failed
-              </span>
-              <br />
-              <br />
-              <p>Your Vodafone mobile has been recharged successfully. Details below.</p>
+              <span class="status_message failed">Recharge Failed</span><br /><br />
+              <p>Your Vodafone mobile has been recharged successfully. The amount will be refunded to you within 7 working days. Details below:</p>
           </div>
           <div class="payment_detail_block">
               <label>Mobile Number</label>
@@ -47,38 +43,17 @@
           </div>
           <div class="payment_detail_block">
               <label>Amount</label>
-              <span>799</span>
+              <span>&#x20b9;&nbsp;799</span>
           </div>
           <div class="payment_detail_block">
-              <label>Date & Time</label>
+              <label>Date &amp; Time</label>
               <span>4 Oct 2017 12:33:11</span>
           </div>
-          <p class="refund_message">The amount will be refunded to you within 7 working days.</p>
-          <div class="transactions_action">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                   viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                  <g>
-                      <g>
-                          <path d="M288.502,32.502c-108.328,0-198.827,77.485-219.166,179.899l-42.482-53.107L0,180.784l68.769,85.961
-                              c3.352,4.178,8.338,6.447,13.427,6.447c2.596,0,5.226-0.585,7.685-1.805l103.153-51.577l-15.387-30.757l-75.8,37.892
-                              c14.063-90.5,92.27-160.059,186.655-160.059c104.271,0,189.114,84.843,189.114,189.114s-84.843,189.114-189.114,189.114v34.384
-                              C411.735,479.498,512,379.233,512,256S411.735,32.502,288.502,32.502z"/>
-                      </g>
-                  </g>
-              </svg>
-              <span>
-                  Make another payment
-              </span>
+          <div class="secondary_button">
+              <img src='images/redo.png'/><span>Make another payment</span>
           </div>
-          <div class="transactions_action">
-              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                   viewBox="0 0 31.112 31.112" style="enable-background:new 0 0 31.112 31.112;" xml:space="preserve">
-              <polygon points="31.112,1.414 29.698,0 15.556,14.142 1.414,0 0,1.414 14.142,15.556 0,29.698 1.414,31.112 15.556,16.97
-                  29.698,31.112 31.112,29.698 16.97,15.556 "/>
-              </svg>
-              <span>
-                  Close this window
-              </span>
+          <div class="secondary_button">
+              <img src='images/close.png'/><span>Close this window</span>
           </div>
         </div>
     <img src="images/powered-by-billdesk.png" class="powered-by" />
