--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -111,10 +111,10 @@
         <div class="operator_and_plans">
           <div class="selected_operator"> <!--Selected Operator shows here + option to view plans -->
              <img src="images/Operators/vodafone-color.png">
-             <div class="selected_circle_info">
+             <a href="./SelectCircle.html" class="selected_circle_info">
                <span>Vodafone</span>
                <span class="selected_operator_circle">Karnataka</span>
-             </div>
+             </a>
              <img class='select_different_operator' src="images/combo.png"/>
              <span class="btn-right">
                <a href="ViewPlans.html">view plans</a>
