--- a/SelectOperator.html
+++ b/SelectOperator.html
@@ -31,7 +31,7 @@
           <span class="control-label">Select network operator</span>
           <ul class="network_operators_grid">
               <li id="vodafone">
-                  <a href='RechargeInput.html'><img src="images/Operators/vodafone.png" />
+                  <a href='SelectCircle.html'><img src="images/Operators/vodafone.png" />
                   <span>Vodafone</span>
               </li>
               <li id="idea">
