--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -96,6 +96,9 @@
                     $("#pay_button").removeClass("primary");
                 }
             })
+            $("#pay_button").on('click', function() {
+                window.location = "./PaymentSuccess.html"
+            })
         })
     </script>
 </body>
