--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -97,7 +97,11 @@
                 } else {
                     $("#pay_button").removeClass("primary");
                 }
+            });
+            $("#pay_button").on('click', function() {
+                window.location = "./PaymentSuccess.html"
             })
+
         })
     </script>
 </body>
