Mobile number corrected in prototype

--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -31,7 +31,7 @@
             <span class="operator">
                 <span class="control-label">Mobile no.</span>
                 <img src="images/Operators/vodafone-color.png" />
-                <span class="operator_name">Vodafone</span>
+                <span class="operator_name">9108292413</span>
             </span>
             <span class="cost">
                 <span class="control-label">Amount</span>
