--- a/SelectOperator old.html
+++ b/SelectOperator old.html
@@ -31,51 +31,51 @@
           <span class="control-label">Select network operator</span>
           <ul class="network_operators_grid">
               <li id="vodafone">
-                  <a href='SelectCircle.html'><img src="images/Operators/color/vodafone.png" />
+                  <a href='SelectCircle.html'><img src="images/Operators/vodafone.png" />
                   <span>Vodafone</span>
               </li>
               <li id="idea">
-                  <img src="images/Operators/color/idea.png" />
+                  <img src="images/Operators/idea.png" />
                   <span>Idea</span>
               </li>
               <li id="airtel">
-                  <img src="images/Operators/color/airtel.png" />
+                  <img src="images/Operators/airtel.png" />
                   <span>Airtel</span>
               </li>
               <li id="docomo">
-                  <img src="images/Operators/color/docomo.png" />
+                  <img src="images/Operators/docomo.png" />
                   <span>Docomo</span>
               </li>
               <li id="tata_indicom">
-                  <img src="images/Operators/color/tata-indicom.png" />
+                  <img src="images/Operators/tata-indicom.png" />
                   <span>Tata Indicom</span>
               </li>
               <li id="jio">
-                  <img src="images/Operators/color/jio.png" />
+                  <img src="images/Operators/jio.png" />
                   <span>Jio</span>
               </li>
               <li id="reliance_gsm">
-                  <img src="images/Operators/color/reliance.png" />
+                  <img src="images/Operators/reliance.png" />
                   <span>Reliance GSM</span>
               </li>
               <li id="mts">
-                  <img src="images/Operators/color/mts.png" />
+                  <img src="images/Operators/mts.png" />
                   <span>MTS</span>
               </li>
               <li id="bsnl">
-                  <img src="images/Operators/color/bsnl.png" />
+                  <img src="images/Operators/bsnl.png" />
                   <span>BSNL</span>
               </li>
               <li id="uninor">
-                  <img src="images/Operators/color/uninor.png" />
+                  <img src="images/Operators/uninor.png" />
                   <span>Uninor</span>
               </li>
               <li id="mtnl_delhi">
-                  <img src="images/Operators/color/mtnl.png" />
+                  <img src="images/Operators/mtnl.png" />
                   <span>MTNL Delhi</span>
               </li>
               <li id="mtnl_mumbai">
-                  <img src="images/Operators/color/mtnl.png" />
+                  <img src="images/Operators/mtnl.png" />
                   <span>MTNL Mumbai</span>
               </li>
           </ul>
