Attempt 3 at removing link to mobile number

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -79,7 +79,7 @@
 
           <div class="input-group">
             <span class="input-group-addon">+91</span>
-            <input type="number"
+            <input type="tel"
               max="9999999999"
               pattern="[0-9]*"
               inputmode="numeric"
