Placeholder for account-based activities added

--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -68,6 +68,7 @@
           </g>
         </svg>
       </span>
+      <span id="nav_account"><img src='images/user.png'></span>
     </div>
 
     <div class="content">
