--- a/PaymentFailure.html
+++ b/PaymentFailure.html
@@ -15,6 +15,7 @@
     <div class="container">
         <div class="nav_bar">
             <a href="/"><img src="images/recharge-logo.png" /></a>
+            <span id="nav_account"><img src='images/user.png'></span>
         </div>
         <div class="content-list">
           <div class="payment_status">
@@ -47,6 +48,7 @@
               <img src='images/close.png'/><span>Close this window</span>
           </div>
         </div>
+      </div>
     <img src="images/powered-by-billdesk.png" class="powered-by" />
     <img src="images/city-mobile.png" class="billdesk-city">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
