--- a/SelectCircle.html
+++ b/SelectCircle.html
@@ -15,8 +15,10 @@
     <div class="container">
         <div class="nav_bar">
           <div class="selected_operator">
-              <img src="images/Operators/vodafone-color.png"/>
-              <div class="plans-operator-name">Vodafone</div>
+              <div class="operator_circle_group">
+                <img src="images/Operators/vodafone-color.png"/>
+                <div class="plans-operator-name">Vodafone</div>
+              </div>
               <span id="nav_prev">
                   <svg width="18px" height="18px" viewBox="0 0 14 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
