--- a/PaymentSuccess.html
+++ b/PaymentSuccess.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="nav_bar">
             <a href="/"><img src="images/recharge-logo.png" /></a>
-            <span id="nav_account"><img src='images/user.png'></span>
+            <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
         </div>
         <div class="content-list">
           <div class="payment_status">
