--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -26,6 +26,7 @@
                     </g>
                 </svg>
             </span>
+            <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
         </div>
         <div class="recharge_summary">
             <span class="operator">
