--- a/PastPayments.html
+++ b/PastPayments.html
@@ -88,6 +88,22 @@
           </div>
           <span>&#x20b9;&nbsp;31</span>
         </li>
+        <li>
+          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div>
+            <span class="past_number">9108292413</span>
+            <span class="past_area">Vodafone Karnataka</span>
+          </div>
+          <span>&#x20b9;&nbsp;31</span>
+        </li>
+        <li>
+          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div>
+            <span class="past_number">9108292413</span>
+            <span class="past_area">Vodafone Karnataka</span>
+          </div>
+          <span>&#x20b9;&nbsp;31</span>
+        </li>
       </ul>
       <h5 class='disclaimer'>The benefit attached to the same amount is subject to change, based on the operator's decision. Please verify recharge amount and benefit with your operator before proceeding.</h5>
     </div>
