Past Payments page imporved

--- a/PastPayments.html
+++ b/PastPayments.html
@@ -70,10 +70,10 @@
     </div>
 
     <div class="view_plans content-list">
-      <h3 class='section-title'>Past Recharges</h3>
+      <h3 class='control-label'>Past Recharges</h3>
       <ul>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/vodafone.png" /></div>
           <div>
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
@@ -81,7 +81,7 @@
           <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/vodafone.png" /></div>
           <div>
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
@@ -89,7 +89,7 @@
           <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/docomo.png" /></div>
           <div>
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
@@ -97,7 +97,7 @@
           <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/tata-indicomcon.png" /></div>
           <div>
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
