Correction to the flow

--- a/PastPayments.html
+++ b/PastPayments.html
@@ -68,7 +68,7 @@
       </span>
       <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
     </div>
-
+    <div class="buffer-div"></div>
     <div class="view_plans content-list">
       <h3 class='control-label'>Past Recharges</h3>
       <ul>
