--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -29,6 +29,7 @@
     type="text/css"
     href="css/rechargeinput.css">
 
+    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
 </head>
 
 <body>
@@ -71,6 +72,8 @@
       <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
     </div>
 
+    <!-- <div id='hovermenu'><span>bottom </span></div> -->
+    <div class="buffer-div"></div>
     <div class="content">
       <form class="recharge_form" action="SelectPaymentMethod.html">
         <div class="form-group">
@@ -185,7 +188,6 @@
         }
       })
     });
-
   </script>
 </body>
 </html>
