--- a/SelectCircle.html
+++ b/SelectCircle.html
@@ -28,8 +28,10 @@
                       </g>
                   </svg>
               </span>
+              <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png' style='margin-top: 0px;'></a></span>
           </div>
         </div>
+        <div class="buffer-div"></div>
         <div class='operators_list content-list'>
           <h3 class="control-label">Select network operator</h3>
           <ul class="network_circles_list">
