--- a/SelectOperator.html
+++ b/SelectOperator.html
@@ -26,7 +26,9 @@
                     </g>
                 </svg>
             </span>
+            <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
         </div>
+        <div class="buffer-div"></div>
         <div class='content-grid'>
           <span class="control-label">Select network operator</span>
           <ul class="network_operators_grid">
