--- a/PaymentSuccess.html
+++ b/PaymentSuccess.html
@@ -17,6 +17,7 @@
             <a href="/"><img src="images/recharge-logo.png" /></a>
             <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
         </div>
+        <div class="buffer-div"></div>
         <div class="content-list">
           <div class="payment_status">
               <span class="status_symbol">
