--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -28,6 +28,7 @@
             </span>
             <span id="nav_account"><a href='PastPayments.html'><img src='images/user.png'></a></span>
         </div>
+        <div class="buffer-div"></div>
         <div class="recharge_summary">
             <span class="operator">
                 <span class="control-label">Mobile no.</span>
