--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="css/_common.css">
 <script>
 </script>
 <style>
 </style>
 </head>
 <body>
-<a href='RechargeInput.html'>recharge</a>
+<h1 style='font-size:20px;margin-auto;'><a href='SelectOperator.html'>Recharge Flow Only</a><h2>
 </body>
 </html>
