View plans corrected

--- a/ViewPlans.html
+++ b/ViewPlans.html
@@ -20,6 +20,7 @@
             <span id="nav_close" onclick="RechargeInput.html">&#10005;</span>
         </div>
       </div>
+      <div class="buffer-div"></div>
       <ul class="horizontal_tabs">
           <li class="active">Full Talktime</li>
           <li>3G</li>
