Some issues fixed

--- a/ViewPlans.html
+++ b/ViewPlans.html
@@ -20,7 +20,6 @@
             <span id="nav_close" onclick="RechargeInput.html">&#10005;</span>
         </div>
       </div>
-      <div class="buffer-div"></div>
       <ul class="horizontal_tabs">
           <li class="active">Full Talktime</li>
           <li>3G</li>
@@ -28,6 +27,7 @@
           <li>Topup</li>
           <li>Roaming</li>
       </ul>
+      <div class="plans-buffer"></div>
         <div class="recharge_plans content-list">
             <a class="plan" href="/">
                 <h3>₹25</h3>
