New VD for Tez and UPI

--- a/TEZPayment.html
+++ b/TEZPayment.html
@@ -46,7 +46,8 @@
               <div class="form-group">
                   <label class="control-label" for="upi_id">Enter Tez UPI ID</label>
                   <div class="input-group">
-                      <input type="text" class="form-control" id="upi_id" autofocus="autofocus" style="border-radius:4px;">
+                      <span class="input-group-addon"><img src='images/paymentsmethods/tez-small.png' class='tez'/></span>
+                      <input type="text" class="form-control" id="upi_id" autofocus="autofocus">
                   </div>
                   <img class="tez-logo" id="tez" src="images/paymentsmethods/tez.png" />
               </div>
