--- a/UPIPayment.html
+++ b/UPIPayment.html
@@ -46,9 +46,10 @@
               <div class="form-group">
                   <label class="control-label" for="upi_id">Enter Tez UPI ID</label>
                   <div class="input-group">
-                      <input type="text" class="form-control" id="upi_id" autofocus="autofocus" style="border-radius:4px;">
+                      <span class="input-group-addon"><img src='images/paymentsmethods/upi.png' class='upi'/></span>
+                      <input type="text" class="form-control" id="upi_id" autofocus="autofocus">
                   </div>
-                  <img class="input-logo" id="upi" src="images/paymentsmethods/upi.png"/>
+                  <!-- <img class="input-logo" id="upi" src="images/paymentsmethods/upi.png"/> -->
               </div>
               <div class="select_bank">
                   <div class='at-the-rate'><img src='images/at.png' class='the-at'/></div>
