--- a/PastPayments.html
+++ b/PastPayments.html
@@ -91,15 +91,15 @@
         <li>
           <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/docomo.png" /></div>
           <div>
-            <span class="past_number">9108292413</span>
-            <span class="past_area">Vodafone Karnataka</span>
+            <span class="past_number">7795297785</span>
+            <span class="past_area">Docomo Karnataka</span>
           </div>
           <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
-          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/tata-indicomcon.png" /></div>
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/tata-indicom.png" /></div>
           <div>
-            <span class="past_number">9108292413</span>
+            <span class="past_number">8876771625</span>
             <span class="past_area">Vodafone Karnataka</span>
           </div>
           <span>&#x20b9;&nbsp;31</span>
