--- a/RechargeInput.html
+++ b/RechargeInput.html
@@ -91,7 +91,7 @@
               id="mobile_number"
               autofocus="autofocus">
           </div>
-          
+
         </div>
 
         <div class="form-group">
@@ -134,7 +134,7 @@
       <h3 class='section-title'>Past Recharges</h3>
       <ul>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/vodafone.png" /></div>
           <div>
             <span class="past_number">9108292413</span>
             <span class="past_area">Vodafone Karnataka</span>
@@ -142,10 +142,10 @@
           <span>&#x20b9;&nbsp;31</span>
         </li>
         <li>
-          <img class="operator_logo" src="images/Operators/vodafone-color.png" />
+          <div class="operator-logo-confine"><img class="operator_logo" src="images/Operators/color/docomo.png" /></div>
           <div>
-            <span class="past_number">9108292413</span>
-            <span class="past_area">Vodafone Karnataka</span>
+            <span class="past_number">7795297785</span>
+            <span class="past_area">Docomo Karnataka</span>
           </div>
           <span>&#x20b9;&nbsp;31</span>
         </li>
